# nyc-taxi-pipeline

./: .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pr_test.yml
dbt_transform/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_transform/macros/: cast_to_boolean.sql  generate_schema_name.sql  map_payment_type.sql
dbt_transform/models/marts/audit/: err_invalid_financial_trips.sql
dbt_transform/models/observability/: profile_stg_nyc_taxi__yellow_trips.sql
dbt_transform/models/staging/: _sources.yml  _stg__models.yml  _unit_tests.yml  stg_nyc_taxi__yellow_trips.sql
dbt_transform/seeds/: seed_payment_mapping.csv
docs/architecture/: medallion_data_flow.puml
notebooks/: 01_Run_Bronze.ipynb  02_Run_Silver.ipynb  dev_scratchpad_bronze.ipynb  dev_scratchpad_h3.ipynb  run_bronze.py  run_build_zone.ipynb
requirements/: base.txt  databricks.txt  dev.txt
scripts/migrations/: 001_create_bronze_tables.sql  002_create_silver_table.sql  003_create_dim_taxi_zone_h3.sql  run_migrations.py
src/: config.py  nyc_taxi_silver.py
src/bronze/: loader.py  transformations.py
src/common/: logger.py
src/models/: dq_result.py
src/nyc_taxi_pipeline/: nyc_taxi_silver.py  run_silver.py
src/nyc_taxi_pipeline/bronze/: loader.py  schema.py  transformations.py
src/nyc_taxi_pipeline/common/: auditor.py
src/nyc_taxi_pipeline/config/: rules.yaml  settings.py
src/nyc_taxi_pipeline/silver/: deduplication.py  dq_rules.py  h3_enrichment.py  pipeline.py  schema.py  standardization.py  surrogate_key.py  udfs.py  writer.py
src/nyc_taxi_pipeline/spatial/: build_zone_lookup.py  run_build_zone_lookup.py
src/nyc_taxi_pipeline/utils/: spark_utils.py
tests/: conftest.py  helpers.py  test_bronze_transformations.py  test_bronze_unit.py  test_build_zone_lookup.py  test_silver_integration.py  test_silver_integration.py.bak  test_silver_loader.py  test_silver_loader.py.bak  test_silver_unit.py
tests/silver/: test_deduplication.py  test_dq_rules.py  test_h3_enrichment.py  test_standardization.py  test_surrogate_key.py
tests/spatial/: test_build_zone_lookup.py
(+6 files in other folders)
