[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc_taxi_pipeline"
version = "0.1.0"            
description = "NYC Taxi Data Engineering Pipeline on Databricks"
requires-python = ">=3.10"

dependencies = [
    "pyspark>=3.5.0,<3.6.0",               
    "delta-spark==3.1.0",
    "databricks-connect>=15.1.0,<16.0.0"   
]

[tool.pytest.ini_options]
filterwarnings = [
    # 解决问题 1: 屏蔽 Databricks Connect 释放句柄失败的非致命内部警告
    "ignore:ReleaseExecute failed with exception:UserWarning:pyspark.sql.connect.client.reattach",
    
    # 解决问题 2: 屏蔽 PySpark 内部 120 多个 distutils 弃用警告（刷屏元凶）
    "ignore:distutils Version classes are deprecated:DeprecationWarning:pyspark.sql.pandas.utils",
    "ignore:distutils Version classes are deprecated:DeprecationWarning:pyspark.sql.connect.utils"
]

[tool.setuptools.packages.find]
where = ["src"]